<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>odom_to_point_converter</name>
  <version>0.0.3</version>
  <description>A node for converting nav_msgs/Odometry messages to geometry_msgs/PointStamped messages.</description>

  <maintainer email="simon-pierre.deschenes.1@ulaval.ca">Simon-Pierre Deschênes</maintainer>

  <license>new BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
